fixed crud, status code, error message, etc
