# furnivul-server/api/api.docs.yml
@@ -108,11 +108,92 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+    get:
+      tags:
+        - User (Admin)
+      security:
+        - bearerAuth: []
+      summary: Get All User
+      description: Get All User as Admin
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
+  /users/{id}:
+    get:
+      tags:
+        - User (Admin)
+      security:
+        - bearerAuth: []
+      summary: Get User
+      description: Get User by Id (Login as Admin)
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
+    delete:
+      tags:
+        - User (Admin)
+      security:
+        - bearerAuth: []
+      summary: Delete User
+      description: Delete User as Admin
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 
   /courier-services:
     get:
       tags:
-        - CourierService
+        - Courier Service
       security:
         - bearerAuth: []
       summary: Get Courier Services
@@ -138,11 +219,11 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     post:
       tags:
-        - CourierService
+        - Courier Service (Admin)
       security:
         - bearerAuth: []
       summary: Create Courier Service
-      description: Create Courier Service
+      description: Create Courier Service (must login as Admin)
       requestBody:
         content:
           application/json:
@@ -171,7 +252,7 @@ paths:
   /courier-services/{id}:
     get:
       tags:
-        - CourierService
+        - Courier Service
       security:
         - bearerAuth: []
       summary: Get Courier Service
@@ -201,13 +282,44 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+    put:
+      tags:
+        - Courier Service (Admin)
+      security:
+        - bearerAuth: []
+      summary: Update Courier Service
+      description: Update Courier Service (must login as Admin)
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CourierService"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SuccessResponse"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
     delete:
       tags:
-        - CourierService
+        - Courier Service (Admin)
       security:
         - bearerAuth: []
       summary: Delete Courier Service
-      description: Delete Courier Service
+      description: Delete Courier Service (must login as Admin)
       parameters:
         - name: id
           in: path
@@ -229,37 +341,6 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
         "401":
           description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-    put:
-      tags:
-        - CourierService
-      security:
-        - bearerAuth: []
-      summary: Update Courier Service
-      description: Update Courier Service
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/CourierService"
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/SuccessResponse"
-        "400":
-          description: Bad Request
           content:
             application/json:
               schema:
@@ -294,11 +375,11 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     post:
       tags:
-        - Courier
+        - Courier (Admin)
       security:
         - bearerAuth: []
       summary: Create Courier
-      description: Create Courier
+      description: Create Courier (must login as Admin)
       requestBody:
         content:
           application/json:
@@ -359,11 +440,11 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     put:
       tags:
-        - Courier
+        - Courier (Admin)
       security:
         - bearerAuth: []
       summary: Update Courier
-      description: Update Courier
+      description: Update Courier (must login as Admin)
       parameters:
         - name: id
           in: path
@@ -396,11 +477,11 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     delete:
       tags:
-        - Courier
+        - Courier (Admin)
       security:
         - bearerAuth: []
       summary: Delete Courier
-      description: Delete Courier
+      description: Delete Courier (must login as Admin)
       parameters:
         - name: id
           in: path
@@ -430,7 +511,7 @@ paths:
   /product-categories:
     get:
       tags:
-        - ProductCategory
+        - Product Category
       security:
         - bearerAuth: []
       summary: Get Product Categories
@@ -451,11 +532,11 @@ paths:
 
     post:
       tags:
-        - ProductCategory
+        - Product Category (Admin)
       security:
         - bearerAuth: []
       summary: Create Product Category
-      description: Create Product Category
+      description: Create Product Category (must login as Admin)
       requestBody:
         content:
           application/json:
@@ -479,7 +560,7 @@ paths:
   /product-types:
     get:
       tags:
-        - ProductType
+        - Product Type
       security:
         - bearerAuth: []
       summary: Get Product Types
@@ -499,11 +580,11 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     post:
       tags:
-        - ProductType
+        - Product Type (Admin)
       security:
         - bearerAuth: []
       summary: Create Product Type
-      description: Create Product Type
+      description: Create Product Type (must login as Admin)
       requestBody:
         content:
           application/json:
@@ -527,7 +608,7 @@ paths:
   /product-types/{id}:
     get:
       tags:
-        - ProductType
+        - Product Type
       security:
         - bearerAuth: []
       summary: Get Product Type
@@ -553,11 +634,11 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     put:
       tags:
-        - ProductType
+        - Product Type (Admin)
       security:
         - bearerAuth: []
       summary: Update Product Type
-      description: Update Product Type
+      description: Update Product Type (must login as Admin)
       parameters:
         - name: id
           in: path
@@ -585,11 +666,11 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     delete:
       tags:
-        - ProductType
+        - Product Type (Admin)
       security:
         - bearerAuth: []
       summary: Delete Product Type
-      description: Delete Product Type
+      description: Delete Product Type (must login as Admin)
       parameters:
         - name: id
           in: path
@@ -614,7 +695,7 @@ paths:
   /product-categories/{id}:
     get:
       tags:
-        - ProductCategory
+        - Product Category
       security:
         - bearerAuth: []
       summary: Get Product Category
@@ -640,11 +721,11 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     put:
       tags:
-        - ProductCategory
+        - Product Category (Admin)
       security:
         - bearerAuth: []
       summary: Update Product Category
-      description: Update Product Category
+      description: Update Product Category (must login as Admin)
       parameters:
         - name: id
           in: path
@@ -672,11 +753,11 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     delete:
       tags:
-        - ProductCategory
+        - Product Category (Admin)
       security:
         - bearerAuth: []
       summary: Delete Product Category
-      description: Delete Product Category
+      description: Delete Product Category (must login as Admin)
       parameters:
         - name: id
           in: path
@@ -718,10 +799,12 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
     post:
+      security:
+        - bearerAuth: []
       tags:
-        - Product
+        - Product (Admin)
       summary: Create Product
-      description: Create Product
+      description: Create Product (must login as Admin)
       requestBody:
         content:
           application/json:
@@ -768,10 +851,12 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
     put:
+      security:
+        - bearerAuth: []
       tags:
-        - Product
+        - Product (Admin)
       summary: Update Product
-      description: Update Product
+      description: Update Product (must login as Admin)
       parameters:
         - name: id
           in: path
@@ -799,11 +884,11 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     delete:
       tags:
-        - Product
+        - Product (Admin)
       security:
         - bearerAuth: []
       summary: Delete Product
-      description: Delete Product
+      description: Delete Product (must login as Admin)
       parameters:
         - name: id
           in: path
@@ -829,8 +914,6 @@ paths:
     get:
       tags:
         - Discuss
-      security:
-        - bearerAuth: []
       summary: Get Discuss
       description: Get Discuss
       responses:
@@ -956,6 +1039,28 @@ paths:
               schema:
                 $ref: "#/components/schemas/SuccessResponse"
 
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
+  /reviews/data:
+    get:
+      tags:
+        - Review (Admin)
+      security:
+        - bearerAuth: []
+      summary: Get All Review Data
+      description: Get All Review Data (must login as Admin)
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Review"
         "400":
           description: Bad Request
           content:
@@ -1094,6 +1199,28 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
+  /transactions/data:
+    get:
+      tags:
+        - Transaction (Admin)
+      security:
+        - bearerAuth: []
+      summary: Get All Transaction Data
+      description: Get All Transaction Data (must login as Admin)
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Transaction"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
   /transactions:
     get:
       tags:
@@ -1199,11 +1326,11 @@ paths:
 
     delete:
       tags:
-        - Transaction
+        - Transaction (Admin)
       security:
         - bearerAuth: []
       summary: Delete Transaction
-      description: Delete Transaction
+      description: Delete Transaction (must login as Admin)
       parameters:
         - name: id
           in: path
@@ -1211,8 +1338,34 @@ paths:
           schema:
             type: string
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Transaction"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
+  /transaction-details/data:
+    get:
+      tags:
+        - Transaction Details (Admin)
+      security:
+        - bearerAuth: []
+      summary: Get All Transaction Details Data
+      description: Get All Transaction Details Data (must login as Admin)
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TransactionDetails"
         "400":
           description: Bad Request
           content:
@@ -1223,7 +1376,7 @@ paths:
   /transaction-details:
     get:
       tags:
-        - TransactionDetails
+        - Transaction Details
       security:
         - bearerAuth: []
       summary: Get Transaction Details
@@ -1244,7 +1397,7 @@ paths:
 
     post:
       tags:
-        - TransactionDetails
+        - Transaction Details
       security:
         - bearerAuth: []
       summary: Create Transaction Details
@@ -1270,7 +1423,7 @@ paths:
   /transaction-details/{id}:
     get:
       tags:
-        - TransactionDetails
+        - Transaction Details
       security:
         - bearerAuth: []
       summary: Get Transaction Details
@@ -1293,7 +1446,7 @@ paths:
 
     put:
       tags:
-        - TransactionDetails
+        - Transaction Details
       security:
         - bearerAuth: []
       summary: Update Transaction Details
@@ -1325,7 +1478,7 @@ paths:
 
     delete:
       tags:
-        - TransactionDetails
+        - Transaction Details (Admin)
       security:
         - bearerAuth: []
       summary: Delete Transaction Details
@@ -1337,8 +1490,12 @@ paths:
           schema:
             type: string
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TransactionDetails"
         "400":
           description: Bad Request
           content:
@@ -1346,6 +1503,134 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
+  /voucher:
+    get:
+      tags:
+        - Voucher
+      security:
+        - bearerAuth: []
+      summary: Get Voucher
+      description: Get Voucher
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Voucher"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
+    post:
+      tags:
+        - Voucher (Admin)
+      security:
+        - bearerAuth: []
+      summary: Create Voucher
+      description: Create Voucher (must login as Admin)
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Voucher"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Voucher"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
+  /voucher/{id}:
+    get:
+      tags:
+        - Voucher
+      security:
+        - bearerAuth: []
+      summary: Get Voucher
+      description: Get Voucher
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    put:
+      tags:
+        - Voucher (Admin)
+      security:
+        - bearerAuth: []
+      summary: Update Voucher
+      description: Update Voucher (must login as Admin)
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Voucher"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Voucher"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    delete:
+      tags:
+        - Voucher (Admin)
+      security:
+        - bearerAuth: []
+      summary: Delete Voucher
+      description: Delete Voucher (must login as Admin)
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Voucher"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 components:
   securitySchemes:
     bearerAuth:
@@ -1585,6 +1870,29 @@ components:
         qty:
           type: integer
           example: 2
+
+    Voucher:
+      type: object
+      properties:
+        name:
+          type: string
+          example: Voucher 50000
+        description:
+          type: string
+          example: Potongan sebesar 50000
+        discount:
+          type: integer
+          example: 50000
+        code:
+          type: string
+          example: ABC123
+        start_date:
+          type: string
+          example: 2020-10-30
+        end_date:
+          type: string
+          example: 2020-11-30
+
     LoginResponse:
       type: object
       properties:
