# furnivul-server/controllers/courier/courier.controller.js
@@ -1,6 +1,10 @@
 const Courier = require("../../models/courier/courier");
 const CourierService = require("../../models/courier/courier.service");
-const { sendSuccessResponse, sendErrorResponse } = require("../../helpers/response.helper");
+const {
+  sendSuccessResponse,
+  sendErrorResponse,
+} = require("../../helpers/response.helper");
+const Role = require("../../models/role/role");
 
 module.exports = {
   getAllData: async (req, res) => {
@@ -12,16 +16,11 @@ module.exports = {
 
       if (!page || !limit) {
         if (couriers.length === 0) {
-          console.log("Courier is empty")
-          return sendSuccessResponse(
-            res,
-            204,
-            "Get all couriers success",
-            "Courier is empty"
-          );
+          console.log("Courier is empty");
+          return sendSuccessResponse(res, 200, "Success", "Courier is empty");
         }
 
-        sendSuccessResponse(res, 200, "Get all couriers success", couriers);
+        sendSuccessResponse(res, 200, "Success", couriers);
       } else {
         const startIndex = (page - 1) * limit;
         const endIndex = page * limit;
@@ -56,7 +55,7 @@ module.exports = {
         return sendErrorResponse(
           res,
           400,
-          "Id not found",
+          "Bad request",
           new Error("Id not found or empty")
         );
       }
@@ -69,13 +68,25 @@ module.exports = {
   },
   updateData: async (req, res) => {
     try {
+      const role = req.payload.role;
+
+      const checkRole = await Role.findById(role);
+      if (checkRole.role !== "admin") {
+        return sendErrorResponse(
+          res,
+          403,
+          "Forbidden",
+          new Error("You are not admin")
+        );
+      }
+
       const { id } = req.params;
 
       if (!id) {
         return sendErrorResponse(
           res,
           400,
-          "Id not found",
+          "Bad request",
           new Error("Id not found or empty")
         );
       }
@@ -85,7 +96,7 @@ module.exports = {
         return sendErrorResponse(
           res,
           400,
-          "Courier and courier service required",
+          "Bad request",
           new Error("Courier and courier service must be not empty")
         );
       }
@@ -95,6 +106,16 @@ module.exports = {
         { courier, _idCourierService },
         { new: true }
       );
+
+      if (!updateCourier) {
+        return sendErrorResponse(
+          res,
+          404,
+          "Not found",
+          new Error("Courier not found")
+        );
+      }
+
       sendSuccessResponse(res, 200, "Update courier success", updateCourier);
     } catch (error) {
       sendErrorResponse(res, 500, "Error update courier", error);
@@ -103,13 +124,25 @@ module.exports = {
 
   deleteData: async (req, res) => {
     try {
+      const role = req.payload.role;
+
+      const checkRole = await Role.findById(role);
+      if (checkRole.role !== "admin") {
+        return sendErrorResponse(
+          res,
+          403,
+          "Forbidden",
+          new Error("You are not admin")
+        );
+      }
+
       const { id } = req.params;
 
       if (!id) {
         return sendErrorResponse(
           res,
           400,
-          "Id not found",
+          "Bad request",
           new Error("Id not found or empty")
         );
       }
@@ -118,21 +151,21 @@ module.exports = {
       if (!courier) {
         return sendErrorResponse(
           res,
-          400,
-          "Courier not found",
+          404,
+          "Not found",
           new Error("Courier not found")
         );
       }
 
-      const courierservice = await CourierService.deleteMany(
-        { _id: { $in: courier._idCourierService } }
-      );
+      const courierservice = await CourierService.deleteMany({
+        _id: { $in: courier._idCourierService },
+      });
 
       if (!courierservice) {
         return sendErrorResponse(
           res,
-          400,
-          "Courier service not found",
+          404,
+          "Not found",
           new Error("Courier service not found")
         );
       }
@@ -144,13 +177,38 @@ module.exports = {
   },
   addData: async (req, res) => {
     try {
+      const role = req.payload.role;
+
+      const checkRole = await Role.findById(role);
+      if (checkRole.role !== "admin") {
+        return sendErrorResponse(
+          res,
+          403,
+          "Forbidden",
+          new Error("You are not admin")
+        );
+      }
+
       let { courier, _idCourierService } = req.body;
       if (!courier || !_idCourierService) {
         return sendErrorResponse(
           res,
           400,
-          "Courier and courier service required",
+          "Bad request",
           new Error("Courier and courier service must be not empty")
+        );
+      }
+
+      const checkCourier = await Courier.find({
+        courier,
+      });
+
+      if (checkCourier.length > 0) {
+        return sendErrorResponse(
+          res,
+          409,
+          "Conflict",
+          new Error("Courier already exist")
         );
       }
 
@@ -158,10 +216,7 @@ module.exports = {
         courier,
         _idCourierService,
       });
-      sendSuccessResponse(res, 200, "Add courier success", {
-        _id: newCourier._id,
-        ...newCourier._doc,
-      });
+      sendSuccessResponse(res, 200, "Add courier success", newCourier);
     } catch (error) {
       sendErrorResponse(res, 500, "Error add courier", error);
     }
