# furnivul-server/controllers/voucher/voucher.controller.js
@@ -3,6 +3,7 @@ const {
   sendSuccessResponse,
   sendErrorResponse,
 } = require("../../helpers/response.helper");
+const Role = require("../../models/role/role");
 
 module.exports = {
   getAllData: async (req, res) => {
@@ -13,9 +14,14 @@ module.exports = {
 
       if (!page || !limit) {
         if (vouchers.length === 0) {
-          return sendSuccessResponse(res, 204, "Get all vouchers success", "Voucher is empty");
+          return sendSuccessResponse(
+            res,
+            200,
+            "Success",
+            "Voucher is empty"
+          );
         }
-        sendSuccessResponse(res, 200, "Get all vouchers success", vouchers);
+        sendSuccessResponse(res, 200, "Success", vouchers);
       } else {
         const startIndex = (page - 1) * limit;
         const endIndex = page * limit;
@@ -39,7 +45,7 @@ module.exports = {
         sendSuccessResponse(res, 200, "Get all vouchers page " + page, result);
       }
     } catch (error) {
-      sendErrorResponse(res, 500, "Error get all vouchers", error);
+      sendErrorResponse(res, 500, "Internal server error", error);
     }
   },
   getDatabyID: async (req, res) => {
@@ -50,7 +56,7 @@ module.exports = {
         return sendErrorResponse(
           res,
           400,
-          "Id not found",
+          "Bad request",
           new Error("Id not found or empty")
         );
       }
@@ -66,13 +72,25 @@ module.exports = {
         );
       }
 
-      sendSuccessResponse(res, 200, "Get voucher by id success", voucher);
+      sendSuccessResponse(res, 200, "Success", voucher);
     } catch (error) {
-      sendErrorResponse(res, 500, "Error get voucher by id", error);
+      sendErrorResponse(res, 500, "Internal server error", error);
     }
   },
   updateData: async (req, res) => {
     try {
+      const role = req.payload.role;
+
+      const checkRole = await Role.findById(role);
+      if (checkRole.role !== "admin") {
+        return sendErrorResponse(
+          res,
+          401,
+          "Unauthorized",
+          new Error("You are not admin")
+        );
+      }
+
       const { id } = req.params;
       let { name, discount, description, code, start_date, end_date } =
         req.body;
@@ -81,7 +99,7 @@ module.exports = {
         return sendErrorResponse(
           res,
           400,
-          "Id not found",
+          "Bad request",
           new Error("Id not found or empty")
         );
       }
@@ -97,14 +115,17 @@ module.exports = {
         return sendErrorResponse(
           res,
           400,
-          "Data not found",
-          new Error("Data not found or empty")
+          "Bad request",
+          new Error("Fields must be not empty")
         );
       }
 
+      const currentDate = new Date();
+      const isActive = new Date(end_date) > currentDate;
+
       const update = await Voucher.findByIdAndUpdate(
         id,
-        { name, discount, description, code, start_date, end_date },
+        { name, discount, description, code, start_date, end_date, isActive },
         { new: true }
       );
 
@@ -117,20 +138,32 @@ module.exports = {
         );
       }
 
-      sendSuccessResponse(res, 200, "Update voucher success", update);
+      sendSuccessResponse(res, 200, "Success", update);
     } catch (error) {
-      sendErrorResponse(res, 500, "Error update voucher", error);
+      sendErrorResponse(res, 500, "Invernal server error", error);
     }
   },
   deleteData: async (req, res) => {
     try {
+      const role = req.payload.role;
+
+      const checkRole = await Role.findById(role);
+      if (checkRole.role !== "admin") {
+        return sendErrorResponse(
+          res,
+          401,
+          "Unauthorized",
+          new Error("You are not admin")
+        );
+      }
+
       const { id } = req.params;
 
       if (!id) {
         return sendErrorResponse(
           res,
           400,
-          "Id not found",
+          "Bad request",
           new Error("Id not found or empty")
         );
       }
@@ -145,13 +178,25 @@ module.exports = {
         );
       }
 
-      sendSuccessResponse(res, 200, "Delete voucher success", voucher);
+      sendSuccessResponse(res, 200, "Success", voucher);
     } catch (error) {
-      sendErrorResponse(res, 500, "Error delete voucher", error);
+      sendErrorResponse(res, 500, "Invernal server error", error);
     }
   },
   addData: async (req, res) => {
     try {
+      const role = req.payload.role;
+
+      const checkRole = await Role.findById(role);
+      if (checkRole.role !== "admin") {
+        return sendErrorResponse(
+          res,
+          401,
+          "Unauthorized",
+          new Error("You are not admin")
+        );
+      }
+
       let { name, discount, description, code, start_date, end_date } =
         req.body;
 
@@ -166,12 +211,15 @@ module.exports = {
         return sendErrorResponse(
           res,
           400,
-          "All field must be filled",
+          "Bad request",
           new Error(
             "name, discount, description, code, start_date, end_date must be filled"
           )
         );
       }
+
+      const currentDate = new Date();
+      const isActive = new Date(end_date) > currentDate;
 
       const voucher = await Voucher.create({
         name,
@@ -180,11 +228,31 @@ module.exports = {
         code,
         start_date,
         end_date,
+        isActive,
       });
 
-      sendSuccessResponse(res, 201, "Add voucher success", voucher);
+      sendSuccessResponse(res, 201, "Success", voucher);
     } catch (error) {
-      sendErrorResponse(res, 500, "Error add voucher", error);
+      sendErrorResponse(res, 500, "Internal server error", error);
     }
   },
 };
+
+const checkVoucherStatus = () => {
+  Voucher.find().then(vouchers => {
+    const currentDate = new Date();
+
+    vouchers.forEach(voucher => {
+      if (voucher.isActive === true) {
+        if (currentDate > voucher.end_date) {
+          voucher.isActive = false;
+          voucher.save().catch(error => console.error(error));
+        }
+      }
+    });
+  }).catch(error => console.error(error));
+};
+
+checkVoucherStatus();
+
+setInterval(checkVoucherStatus, 24 * 60 * 60 * 1000);
