# furnivul-server/routes/index.route.js
@@ -13,18 +13,18 @@ const discussRouter = require("./discuss/discuss.route.js");
 const transactionRouter = require("./transactions/transaction.js");
 const transactionDetailRouter = require("./transactions/transaction.detail.js");
 const voucherRouter = require("./voucher/voucher.route.js");
-const { auth, isAdmin } = require("../middleware/auth");
+const { auth } = require("../middleware/auth");
 
 router.use("/auth", authRouter);
-router.use("/users", auth, isAdmin, userRouter);
-router.use("/courier-services", auth, isAdmin, courierServiceRouter);
-router.use("/couriers", auth, isAdmin, courierRouter);
+router.use("/users", auth, userRouter);
+router.use("/courier-services", auth, courierServiceRouter);
+router.use("/couriers", auth, courierRouter);
 router.use("/product-categories", auth, productCategoryRouter);
 router.use("/product-types", auth, productTypeRouter);
 router.use("/products", productRouter);
 router.use("/reviews", reviewRouter);
 router.use("/discusses", discussRouter);
 router.use("/transactions", auth, transactionRouter);
-router.use("/transaction-details", auth, isAdmin, transactionDetailRouter);
-router.use("/voucher", auth, isAdmin, voucherRouter);
+router.use("/transaction-details", auth, transactionDetailRouter);
+router.use("/voucher", auth, voucherRouter);
 module.exports = router;
